Changed the image for the post run chest stretch to the correct file.
Removed the click event from the timer once it has been clicked.

Removed the upcoming exercise text for completed workouts.
Changed the upcoming exercise text for the last stretch in a workout.
Removed the stretch image for completed workouts.

--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,11 @@
     cursor: pointer;
 }
 
+.timer--clicked {
+    @extend .timer;
+    cursor: default;
+}
+
 .timer_countdown {
     color: #fff;
     font-size: 2.5rem;
